--- a/LJS230918-I68979K-01/Banner_static.html
+++ b/LJS230918-I68979K-01/Banner_static.html
@@ -59,6 +59,23 @@
 <body>
     <div class="wrapper">
 
+        <h2>Yahoo / Native Ads</h2>
+        <div class="box">
+            <img src="Banner_static/Yahoo - Native Ads/200x200.jpg?v=1">
+            <img src="Banner_static/Yahoo - Native Ads/627x627_1.jpg?v=1">
+            <img src="Banner_static/Yahoo - Native Ads/1200x627_1.jpg?v=1">
+        </div>
+
+        <hr>
+
+        <h2>RTB/POPIN</h2>
+        <div class="box">
+            <img src="Banner_static/RTN-POPIN/1080x1080_1.jpg?v=1">
+            <img src="Banner_static/RTN-POPIN/1200x800_1.jpg?v=1">
+            <img src="Banner_static/RTN-POPIN/1200x628_1.jpg?v=1">
+        </div>
+
+        <hr>
         
         <h2>官網 Hero Banner</h2>
         <div class="box">
