--- a/LJS230918-I68979K-01/Banner_static.html
+++ b/LJS230918-I68979K-01/Banner_static.html
@@ -59,20 +59,78 @@
 <body>
     <div class="wrapper">
 
-        <h2>Yahoo / Native Ads</h2>
+        <h2>PMP - OneAd</h2>
         <div class="box">
-            <img src="Banner_static/Yahoo - Native Ads/200x200.jpg?v=1">
-            <img src="Banner_static/Yahoo - Native Ads/627x627_1.jpg?v=1">
-            <img src="Banner_static/Yahoo - Native Ads/1200x627_1.jpg?v=1">
+            <img src="Banner_static/PMP - OneAd/700x1260_1.jpg?v=1" width="300px">
+            <img src="Banner_static/PMP - OneAd/700x1260_2.jpg?v=1" width="300px">
+            <img src="Banner_static/PMP - OneAd/700x1260_3.jpg?v=1" width="300px">
+            <img src="Banner_static/PMP - OneAd/700x1260_4.jpg?v=1" width="300px">
+            <img src="Banner_static/PMP - OneAd/700x1260_5.jpg?v=1" width="300px">
+            <img src="Banner_static/PMP - OneAd/720x1280.jpg?v=1" width="320px">
         </div>
 
         <hr>
 
         <h2>RTB/POPIN</h2>
         <div class="box">
-            <img src="Banner_static/RTN-POPIN/1080x1080_1.jpg?v=1">
-            <img src="Banner_static/RTN-POPIN/1200x800_1.jpg?v=1">
-            <img src="Banner_static/RTN-POPIN/1200x628_1.jpg?v=1">
+            <img src="Banner_static/RTN-POPIN/1080x1080_1.jpg?v=1" width="400px">
+            <img src="Banner_static/RTN-POPIN/1080x1080_2.jpg?v=1" width="400px">
+            <img src="Banner_static/RTN-POPIN/1080x1080_3.jpg?v=1" width="400px">
+        </div>
+        <div class="box">
+            <img src="Banner_static/RTN-POPIN/1200x800_1.jpg?v=1" width="500px">
+            <img src="Banner_static/RTN-POPIN/1200x800_2.jpg?v=1" width="500px">
+            <img src="Banner_static/RTN-POPIN/1200x800_3.jpg?v=1" width="500px">
+        </div>
+        <div class="box">
+            <img src="Banner_static/RTN-POPIN/1200x628_1.jpg?v=1" width="500px">
+            <img src="Banner_static/RTN-POPIN/1200x628_2.jpg?v=1" width="500px">
+            <img src="Banner_static/RTN-POPIN/1200x628_3.jpg?v=1" width="500px">
+        </div>
+
+        <hr>
+
+        <h2>Yahoo / Native Ads</h2>
+        <div class="box">
+            <img src="Banner_static/Yahoo - Native Ads/200x200.jpg?v=1">
+        </div>
+        <div class="box">
+            <img src="Banner_static/Yahoo - Native Ads/627x627_1.jpg?v=1" width="400px">
+            <img src="Banner_static/Yahoo - Native Ads/627x627_2.jpg?v=1" width="400px">
+            <img src="Banner_static/Yahoo - Native Ads/627x627_3.jpg?v=1" width="400px">
+        </div>
+        <div class="box">
+            <img src="Banner_static/Yahoo - Native Ads/1200x627_1.jpg?v=1" width="500px">
+            <img src="Banner_static/Yahoo - Native Ads/1200x627_2.jpg?v=1" width="500px">
+            <img src="Banner_static/Yahoo - Native Ads/1200x627_3.jpg?v=1" width="500px">
+        </div>
+
+        <hr>
+
+        <h2>Yahoo - Mobile Moments</h2>
+        <div class="box">
+            <img src="Banner_static/Yahoo - Mobile Moments/1080x1920.jpg?v=1">
+        </div>
+
+        <hr>
+
+        <h2>Yahoo - Mobile Billboard</h2>
+        <div class="box">
+            <img src="Banner_static/Yahoo - Mobile Billboard/1080x400.jpg?v=1">
+        </div>
+
+        <hr>
+
+        <h2>PMP- Amnet -Native Ads</h2>
+        <div class="box">
+            <img src="Banner_static/PMP- Amnet -Native Ads/600x600_1.jpg?v=1" width="400px">
+            <img src="Banner_static/PMP- Amnet -Native Ads/600x600_2.jpg?v=1" width="400px">
+            <img src="Banner_static/PMP- Amnet -Native Ads/600x600_3.jpg?v=1" width="400px">
+        </div>
+        <div class="box">
+            <img src="Banner_static/PMP- Amnet -Native Ads/1200x627_1.jpg?v=1" width="500px">
+            <img src="Banner_static/PMP- Amnet -Native Ads/1200x627_2.jpg?v=1" width="500px">
+            <img src="Banner_static/PMP- Amnet -Native Ads/1200x627_3.jpg?v=1" width="500px">
         </div>
 
         <hr>
