--- a/LJS230918-I68979K-01/Banner_dynamic.html
+++ b/LJS230918-I68979K-01/Banner_dynamic.html
@@ -58,25 +58,69 @@
     <div class="wrapper">
         <h2>PMP / OneAd</h2>
         <div class="box col-box">
-            <a href="Banner_dynamic/OneAd/640x960_1/640x960.html">
-                640x960
-                <img src="Banner_dynamic/OneAd/640x960.jpg?v=4" alt="">
+            <a href="Banner_dynamic/0928/OneAd/640x960/640x960.html">
+                640x960 (9/28已進稿)
+                <img src="Banner_dynamic/0928/OneAd/640x960.jpg?v=4" alt="">
             </a>  
         </div>
 
+        <hr>
+
         <h2>PMP/Amnet</h2>
         <div class="box col-box">
-            <a href="Banner_dynamic/Amnet/300x250/300x250.html">
-                300x250
-                <img src="Banner_dynamic/Amnet/300x250.jpg?v=3" alt="">
+            <a href="Banner_dynamic/0928/Amnet/300x250/300x250.html">
+                300x250 (9/28已進稿)
+                <img src="Banner_dynamic/0928/Amnet/300x250.jpg?v=3" alt="">
             </a>  
-            <a href="Banner_dynamic/Amnet/970x250/970x250.html">
-                970x250
-                <img src="Banner_dynamic/Amnet/970x250.jpg?v=3" alt="">
+            <a href="Banner_dynamic/0928/Amnet/970x250/970x250.html">
+                970x250 (9/28已進稿)
+                <img src="Banner_dynamic/0928/Amnet/970x250.jpg?v=3" alt="">
             </a>  
-            <a href="Banner_dynamic/Amnet/320x100/320x100.html">
-                320x100
-                <img src="Banner_dynamic/Amnet/320x100.jpg?v=3" alt="">
+            <a href="Banner_dynamic/0928/Amnet/320x100/320x100.html">
+                320x100 (9/28已進稿)
+                <img src="Banner_dynamic/0928/Amnet/320x100.jpg?v=3" alt="">
+            </a>  
+            <a href="Banner_dynamic/Amnet/970x90/970x90.html">
+                970x90
+                <img src="Banner_dynamic/Amnet/970x90.jpg?v=3" alt="">
+            </a>  
+            <a href="Banner_dynamic/Amnet/728x90/728x90.html">
+                728x90
+                <img src="Banner_dynamic/Amnet/728x90.jpg?v=3" alt="">
+            </a>  
+            <a href="Banner_dynamic/Amnet/336x280/336x280.html">
+                336x280
+                <img src="Banner_dynamic/Amnet/336x280.jpg?v=3" alt="">
+            </a>  
+            <a href="Banner_dynamic/Amnet/320x50/320x50.html">
+                320x50
+                <img src="Banner_dynamic/Amnet/320x50.jpg?v=3" alt="">
+            </a>  
+            <a href="Banner_dynamic/Amnet/300x600/300x600.html">
+                300x600
+                <img src="Banner_dynamic/Amnet/300x600.jpg?v=3" alt="">
+            </a>  
+            <a href="Banner_dynamic/Amnet/250x250/250x250.html">
+                250x250
+                <img src="Banner_dynamic/Amnet/250x250.jpg?v=3" alt="">
+            </a>  
+            <a href="Banner_dynamic/Amnet/160x600/160x600.html">
+                160x600
+                <img src="Banner_dynamic/Amnet/160x600.jpg?v=3" alt="">
+            </a>  
+            <a href="Banner_dynamic/Amnet/120x600/120x600.html">
+                120x600
+                <img src="Banner_dynamic/Amnet/120x600.jpg?v=3" alt="">
+            </a>  
+        </div>
+
+        <hr>
+
+        <h2>Yahoo / Carousel Billboard</h2>
+        <div class="box col-box">
+            <a href="Banner_dynamic/Yahoo/970x250/970x250.html">
+                970x250 (只跑動10秒)
+                <img src="Banner_dynamic/Yahoo/970x250.jpg?v=4" alt="">
             </a>  
         </div>
     </div>
