--- a/LJ231018-U95954C-01/Banner_static.html
+++ b/LJ231018-U95954C-01/Banner_static.html
@@ -58,7 +58,7 @@
 <body>
     <div class="wrapper">
 
-        <!-- <h2>LINE - Native Ads</h2>
+        <h2>LINE - Native Ads</h2>
         <div class="box">
             <div>
                 <div>600x400</div>
@@ -105,15 +105,15 @@
         </div>
         <div>627x627</div>
         <div class="box">
-            <img src="Banner_static/Yahoo - Native Stream/627x627_1.jpg?v=1" width="400px">
-            <img src="Banner_static/Yahoo - Native Stream/627x627_2.jpg?v=1" width="400px">
-            <img src="Banner_static/Yahoo - Native Stream/627x627_3.jpg?v=1" width="400px">
+            <img src="Banner_static/Yahoo - Native Stream/627x627_A.jpg?v=1" width="400px">
+            <img src="Banner_static/Yahoo - Native Stream/627x627_B.jpg?v=1" width="400px">
+            <img src="Banner_static/Yahoo - Native Stream/627x627_C.jpg?v=1" width="400px">
         </div>
         <div>1200x627</div>
         <div class="box">
-            <img src="Banner_static/Yahoo - Native Stream/1200x627_1.jpg?v=1" width="500px">
-            <img src="Banner_static/Yahoo - Native Stream/1200x627_2.jpg?v=1" width="500px">
-            <img src="Banner_static/Yahoo - Native Stream/1200x627_3.jpg?v=1" width="500px">
+            <img src="Banner_static/Yahoo - Native Stream/1200x627_A.jpg?v=1" width="500px">
+            <img src="Banner_static/Yahoo - Native Stream/1200x627_B.jpg?v=1" width="500px">
+            <img src="Banner_static/Yahoo - Native Stream/1200x627_C.jpg?v=1" width="500px">
         </div>
 
         <hr>
@@ -129,22 +129,22 @@
         <h2>Amnet - Native Ads</h2>
         <div>128x128</div>
         <div class="box">
-            <img src="Banner_static/Amnet - Native Ads/128x128.jpg?v=1">
+            <img src="Banner_static/Amnet - Native Ads/128x128.png?v=1">
         </div>
         <div>600x600</div>
         <div class="box">
-            <img src="Banner_static/Amnet - Native Ads/600x600_1.jpg?v=1" width="400px">
-            <img src="Banner_static/Amnet - Native Ads/600x600_2.jpg?v=1" width="400px">
-            <img src="Banner_static/Amnet - Native Ads/600x600_3.jpg?v=1" width="400px">
+            <img src="Banner_static/Amnet - Native Ads/600x600_A.jpg?v=1" width="400px">
+            <img src="Banner_static/Amnet - Native Ads/600x600_B.jpg?v=1" width="400px">
+            <img src="Banner_static/Amnet - Native Ads/600x600_C.jpg?v=1" width="400px">
         </div>
         <div>1200x627</div>
         <div class="box">
-            <img src="Banner_static/Amnet - Native Ads/1200x627_1.jpg?v=1" width="500px">
-            <img src="Banner_static/Amnet - Native Ads/1200x627_2.jpg?v=1" width="500px">
-            <img src="Banner_static/Amnet - Native Ads/1200x627_3.jpg?v=1" width="500px">
+            <img src="Banner_static/Amnet - Native Ads/1200x627_A.jpg?v=1" width="500px">
+            <img src="Banner_static/Amnet - Native Ads/1200x627_B.jpg?v=1" width="500px">
+            <img src="Banner_static/Amnet - Native Ads/1200x627_C.jpg?v=1" width="500px">
         </div>
 
-        <hr> -->
+        <hr>
 
         <!-- <h2>PMP - OneAd</h2>
         <div class="box">
@@ -167,7 +167,7 @@
 
          -->
         
-        <h2>官網 Hero Banner</h2>
+        <!-- <h2>官網 Hero Banner</h2>
         <div class="box">
             <img src="Banner_static/Official-web/600x750.jpg?v=1">
         </div>
@@ -192,7 +192,7 @@
         <div class="box">
             <img src="Banner_static/Official-web/640x800.jpg?v=1">
             <img src="Banner_static/Official-web/400x400.jpg?v=1">
-        </div>
+        </div> -->
 
     </div>
 </body>
