--- a/LJ231018-U95954C-01/Banner_static.html
+++ b/LJ231018-U95954C-01/Banner_static.html
@@ -101,7 +101,7 @@
         <h2>Yahoo - Native Stream</h2>
         <div>200x200</div>
         <div class="box">
-            <img src="Banner_static/Yahoo - Native Stream/200x200.jpg?v=1">
+            <img src="Banner_static/Yahoo - Native Stream/200x200.png?v=1">
         </div>
         <div>627x627</div>
         <div class="box">
