--- a/LJ231018-U95954C-01/Banner_dynamic.html
+++ b/LJ231018-U95954C-01/Banner_dynamic.html
@@ -61,27 +61,27 @@
         <div class="box col-box">
             <a href="Banner_dynamic/Amnet/300x250/300x250.html">
                 300x250
-                <img src="Banner_dynamic/Amnet/300x250.jpg?v=3" alt="">
+                <img src="Banner_dynamic/Amnet/300x250.jpg?v=5" alt="">
             </a>  
             <a href="Banner_dynamic/Amnet/970x250/970x250.html">
                 970x250
-                <img src="Banner_dynamic/Amnet/970x250.jpg?v=3" alt="">
+                <img src="Banner_dynamic/Amnet/970x250.jpg?v=5" alt="">
             </a>  
             <a href="Banner_dynamic/Amnet/320x100/320x100.html">
                 320x100
-                <img src="Banner_dynamic/Amnet/320x100.jpg?v=3" alt="">
+                <img src="Banner_dynamic/Amnet/320x100.jpg?v=5" alt="">
             </a>  
             <a href="Banner_dynamic/Amnet/970x90/970x90.html">
                 970x90
-                <img src="Banner_dynamic/Amnet/970x90.jpg?v=3" alt="">
+                <img src="Banner_dynamic/Amnet/970x90.jpg?v=5" alt="">
             </a>  
             <a href="Banner_dynamic/Amnet/728x90/728x90.html">
                 728x90
-                <img src="Banner_dynamic/Amnet/728x90.jpg?v=3" alt="">
+                <img src="Banner_dynamic/Amnet/728x90.jpg?v=5" alt="">
             </a>  
             <a href="Banner_dynamic/Amnet/336x280/336x280.html">
                 336x280
-                <img src="Banner_dynamic/Amnet/336x280.jpg?v=3" alt="">
+                <img src="Banner_dynamic/Amnet/336x280.jpg?v=5" alt="">
             </a>  
             <a href="Banner_dynamic/Amnet/320x50/320x50.html">
                 320x50
@@ -89,23 +89,71 @@
             </a>  
             <a href="Banner_dynamic/Amnet/300x600/300x600.html">
                 300x600
-                <img src="Banner_dynamic/Amnet/300x600.jpg?v=3" alt="">
+                <img src="Banner_dynamic/Amnet/300x600.jpg?v=5" alt="">
             </a>  
             <a href="Banner_dynamic/Amnet/250x250/250x250.html">
                 250x250
-                <img src="Banner_dynamic/Amnet/250x250.jpg?v=3" alt="">
+                <img src="Banner_dynamic/Amnet/250x250.jpg?v=5" alt="">
             </a>  
             <a href="Banner_dynamic/Amnet/160x600/160x600.html">
                 160x600
-                <img src="Banner_dynamic/Amnet/160x600.jpg?v=3" alt="">
+                <img src="Banner_dynamic/Amnet/160x600.jpg?v=5" alt="">
             </a>  
             <a href="Banner_dynamic/Amnet/120x600/120x600.html"> 
                 120x600
-                <img src="Banner_dynamic/Amnet/120x600.jpg?v=3" alt=""> 
+                <img src="Banner_dynamic/Amnet/120x600.jpg?v=5" alt=""> 
             </a>  
         </div>
 
         <hr>
+
+        <h2>GDN</h2>
+        <div class="box col-box">
+            <a href="Banner_dynamic/GDN/300x250/300x250.html">
+                300x250
+                <img src="Banner_dynamic/GDN/300x250.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/970x250/970x250.html">
+                970x250
+                <img src="Banner_dynamic/GDN/970x250.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/320x100/320x100.html">
+                320x100
+                <img src="Banner_dynamic/GDN/320x100.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/970x90/970x90.html">
+                970x90
+                <img src="Banner_dynamic/GDN/970x90.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/728x90/728x90.html">
+                728x90
+                <img src="Banner_dynamic/GDN/728x90.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/336x280/336x280.html">
+                336x280
+                <img src="Banner_dynamic/GDN/336x280.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/320x50/320x50.html">
+                320x50
+                <img src="Banner_dynamic/GDN/320x50.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/300x600/300x600.html">
+                300x600
+                <img src="Banner_dynamic/GDN/300x600.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/250x250/250x250.html">
+                250x250
+                <img src="Banner_dynamic/GDN/250x250.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/160x600/160x600.html">
+                160x600
+                <img src="Banner_dynamic/GDN/160x600.jpg?v=5" alt="">
+            </a>  
+            <a href="Banner_dynamic/GDN/120x600/120x600.html"> 
+                120x600
+                <img src="Banner_dynamic/GDN/120x600.jpg?v=5" alt=""> 
+            </a>  
+        </div>
     </div>
 </body>
 
