--- a/LJ240119-R73986K-01/Banner_static.html
+++ b/LJ240119-R73986K-01/Banner_static.html
@@ -59,6 +59,79 @@
 <body>
     <div class="wrapper">
         
+        <h2>Amnet - Native Ads</h2>
+        <div>128x128</div>
+        <div class="box">
+            <img src="Banner_static/Amnet - Native Ads/128x128.png?v=1">
+        </div>
+        <div>600x600</div>
+        <div class="box">
+            <img src="Banner_static/Amnet - Native Ads/600x600_1.jpg?v=1" width="400px">
+            <img src="Banner_static/Amnet - Native Ads/600x600_2.jpg?v=1" width="400px">
+            <img src="Banner_static/Amnet - Native Ads/600x600_3.jpg?v=1" width="400px">
+        </div>
+        <div>1200x627</div>
+        <div class="box">
+            <img src="Banner_static/Amnet - Native Ads/1200x627_1.jpg?v=1" width="500px">
+            <img src="Banner_static/Amnet - Native Ads/1200x627_2.jpg?v=1" width="500px">
+            <img src="Banner_static/Amnet - Native Ads/1200x627_3.jpg?v=1" width="500px">
+        </div>
+
+        <hr>
+
+        <h2>VM5 - Window Filip</h2>
+        <div>600x500</div>
+        <div class="box">
+            <img src="Banner_static/VM5 - Window Filip/600x500_1.jpg?v=1">
+            <img src="Banner_static/VM5 - Window Filip/600x500_2.jpg?v=1">
+        </div>
+        <div>1746x450</div>
+        <div class="box">
+            <img src="Banner_static/VM5 - Window Filip/1746x450_1.jpg?v=1">
+            <img src="Banner_static/VM5 - Window Filip/1746x450_2.jpg?v=1">
+        </div>
+
+        <hr>
+
+        <h2>VM5 - Garage</h2>
+        <div>960x2080</div>
+        <div class="box">
+            <img src="Banner_static/VM5 - Garage/960x2080.png?v=1">
+        </div>
+
+        <hr>
+
+        <h2>SPOTIFY - Overlay Ad - Desktop</h2>
+        <div>800x435</div>
+        <div class="box">
+            <img src="Banner_static/SPOTIFY - Overlay Ad - Desktop/800x435.jpg?v=1">
+        </div>
+        <div>728x90</div>
+        <div class="box">
+            <img src="Banner_static/SPOTIFY - Overlay Ad - Desktop/728x90.jpg?v=1">
+        </div>
+        <div>630x920</div>
+        <div class="box">
+            <img src="Banner_static/SPOTIFY - Overlay Ad - Desktop/630x920.jpg?v=1">
+        </div>
+
+        <hr>
+
+        <h2>POPIN - Native Ads</h2>
+        <div>480x280</div>
+        <div class="box">
+            <img src="Banner_static/POPIN - Native Ads/480x280.jpg?v=1">
+        </div>
+        <div>1200x628</div>
+        <div class="box">
+            <img src="Banner_static/POPIN - Native Ads/1200x628.jpg?v=1">
+        </div>
+        <div>300x250</div>
+        <div class="box">
+            <img src="Banner_static/POPIN - Native Ads/300x250.jpg?v=1">
+        </div>
+
+        <hr>
         
         <h2>官網 Hero Banner</h2>
         <div class="box">
