--- a/LJ240119-B39372X-01/Banner_dynamic/728x90/728x90.html
+++ b/LJ240119-B39372X-01/Banner_dynamic/728x90/728x90.html
@@ -10,10 +10,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="authoring-tool" content="Adobe_Animate_CC">
+<meta name="ad.size" content="width=728,height=90">
 <title>728x90</title>
 <!-- write your code here -->
-<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+<script src="https://s0.2mdn.net/ads/studio/cached_libs/createjs_2019.11.15_min.js"></script>
 <script src="728x90.js"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
