--- a/LJ240221-O73331S-01/Banner_static.html
+++ b/LJ240221-O73331S-01/Banner_static.html
@@ -92,6 +92,10 @@
                 <span class="size-text">1200x628</span><br>
                 <img src="Banner_static/LINE/1200x628.jpg?v=2">
             </div>
+            <div>
+                <span class="size-text">600x600</span><br>
+                <img src="Banner_static/LINE/600x600.jpg?v=2">
+            </div>
         </div>
 
         <hr>
