--- a/LJ240327-W78342N-01/Banner_dynamic.html
+++ b/LJ240327-W78342N-01/Banner_dynamic.html
@@ -55,27 +55,27 @@
 
 <body>
     <div class="wrapper">
-        <h2>GDN</h2>
+        <h2>GDN & Amnet</h2>
         <div class="box col-box">
             <a href="Banner_dynamic/300x250/300x250.html">
                 300x250
-                <img src="Banner_dynamic/300x250.jpg?v=7" alt="">
+                <img src="Banner_dynamic/300x250.jpg?v=2" alt="">
             </a> 
             <a href="Banner_dynamic/336x280/336x280.html">
                 336x280
-                <img src="Banner_dynamic/336x280.jpg?v=7" alt="">
+                <img src="Banner_dynamic/336x280.jpg?v=2" alt="">
             </a>  
             <a href="Banner_dynamic/300x600/300x600.html">
                 300x600
-                <img src="Banner_dynamic/300x600.jpg?v=7" alt="">
+                <img src="Banner_dynamic/300x600.jpg?v=2" alt="">
             </a>  
             <a href="Banner_dynamic/320x50/320x50.html">
                 320x50
-                <img src="Banner_dynamic/320x50.jpg?v=7" alt="">
+                <img src="Banner_dynamic/320x50.jpg?v=2" alt="">
             </a>  
             <a href="Banner_dynamic/970x250/970x250.html">
                 970x250
-                <img src="Banner_dynamic/970x250.jpg?v=7" alt="">
+                <img src="Banner_dynamic/970x250.jpg?v=2" alt="">
             </a>  
         </div>
 
