--- a/LJ240327-W78342N-01/Banner_static.html
+++ b/LJ240327-W78342N-01/Banner_static.html
@@ -86,13 +86,11 @@
         <h2>LINE - LAP</h2>
         <div>1200x628</div>
         <div class="box">
-            <img src="Banner_static/LINE - LAP/1200x628_1.jpg?v=7">
-            <img src="Banner_static/LINE - LAP/1200x628_2.jpg?v=7">
+            <img src="Banner_static/LINE - LAP/1200x628.jpg?v=7">
         </div>
         <div>1080x1080</div>
         <div class="box">
-            <img src="Banner_static/LINE - LAP/1080x1080_1.jpg?v=7">
-            <img src="Banner_static/LINE - LAP/1080x1080_2.jpg?v=7">
+            <img src="Banner_static/LINE - LAP/1080x1080.jpg?v=7">
         </div>
         <div>600x400</div>
         <div class="box">
