--- a/LJ240512-F34484F-01/Banner_static.html
+++ b/LJ240512-F34484F-01/Banner_static.html
@@ -62,15 +62,15 @@
         <h2>LINE_LINE Ads</h2>
         <div>1200x628</div>
         <div class="box">
-            <img src="Banner_static/LINE_LINE Ads/1200x628.jpg?v=3">
+            <img src="Banner_static/LINE_LINE Ads/1200x628.jpg?v=5">
         </div>
         <div>1080x1080</div>
         <div class="box">
-            <img src="Banner_static/LINE_LINE Ads/1080x1080.jpg?v=3">
+            <img src="Banner_static/LINE_LINE Ads/1080x1080.jpg?v=5">
         </div>
         <div>600x400</div>
         <div class="box">
-            <img src="Banner_static/LINE_LINE Ads/600x400.jpg?v=3" width="100px">
+            <img src="Banner_static/LINE_LINE Ads/600x400.jpg?v=5" width="100px">
         </div>
 
         <hr>
@@ -78,15 +78,15 @@
         <h2>google Demand Gen Ads</h2>
         <div>1200x1200</div>
         <div class="box">
-            <img src="Banner_static/google Demand Gen Ads/1200x1200 LOGO.png?v=3" width="400px">
+            <img src="Banner_static/google Demand Gen Ads/1200x1200 logo.png?v=5" width="400px">
         </div>
         <div>1200x1200</div>
         <div class="box">
-            <img src="Banner_static/google Demand Gen Ads/1200x1200.jpg?v=3" width="600px">
+            <img src="Banner_static/google Demand Gen Ads/1200x1200.jpg?v=5" width="600px">
         </div>
         <div>1200x628</div>
         <div class="box">
-            <img src="Banner_static/google Demand Gen Ads/1200x628.jpg?v=3" width="1200px">
+            <img src="Banner_static/google Demand Gen Ads/1200x628.jpg?v=5" width="1200px">
         </div>
 
         <hr>
@@ -94,15 +94,15 @@
         <h2>Amnet Native Ads</h2>
         <div>128x128</div>
         <div class="box">
-            <img src="Banner_static/Amnet Native Ads/128x128.png?v=3">
+            <img src="Banner_static/Amnet Native Ads/128x128.png?v=5">
         </div>
         <div>600x600</div>
         <div class="box">
-            <img src="Banner_static/Amnet Native Ads/600x600.jpg?v=3" width="600px">
+            <img src="Banner_static/Amnet Native Ads/600x600.jpg?v=5" width="600px">
         </div>
         <div>1200x627</div>
         <div class="box">
-            <img src="Banner_static/Amnet Native Ads/1200x627.jpg?v=3" width="1200px">
+            <img src="Banner_static/Amnet Native Ads/1200x627.jpg?v=5" width="1200px">
         </div>
 
         <hr>
@@ -110,15 +110,15 @@
         <h2>POPIN  - Display Ads</h2>
         <div>480x280</div>
         <div class="box">
-            <img src="Banner_static/POPIN/480x280.jpg?v=3">
+            <img src="Banner_static/POPIN/480x280.jpg?v=5">
         </div>
         <div>300x250</div>
         <div class="box">
-            <img src="Banner_static/POPIN/300x250.jpg?v=3">
+            <img src="Banner_static/POPIN/300x250.jpg?v=5">
         </div>
         <div>1200x628</div>
         <div class="box">
-            <img src="Banner_static/POPIN/1200x628.jpg?v=3">
+            <img src="Banner_static/POPIN/1200x628.jpg?v=5">
         </div>
 
         <hr>
@@ -126,29 +126,29 @@
         
         <h2>官網 Hero Banner</h2>
         <div class="box">
-            <img src="Banner_static/Official-web/600x750.jpg?v=3">
+            <img src="Banner_static/Official-web/600x750.jpg?v=5">
         </div>
 
         <h2>官網 最新優惠</h2>
         <div class="box">
-            <img src="Banner_static/Official-web/370x245.jpg?v=3">
-            <img src="Banner_static/Official-web/320x280.jpg?v=3">
+            <img src="Banner_static/Official-web/370x245.jpg?v=5">
+            <img src="Banner_static/Official-web/320x280.jpg?v=5">
             <div>
-                <img src="Banner_static/Official-web/640x400.jpg?v=3">
-                <img src="Banner_static/Official-web/640x330.jpg?v=3">
+                <img src="Banner_static/Official-web/640x400.jpg?v=5">
+                <img src="Banner_static/Official-web/640x330.jpg?v=5">
             </div>
         </div>
 
         <h2>App</h2>
         <div class="box">
-            <img src="Banner_static/Official-web/400x400.jpg?v=3">
-            <img src="Banner_static/Official-web/640x960.jpg?v=3">
+            <img src="Banner_static/Official-web/400x400.jpg?v=5">
+            <img src="Banner_static/Official-web/640x960.jpg?v=5">
         </div>
 
         <!-- <h2>官網 POPUP</h2>
         <div class="box">
-            <img src="Banner_static/Official-web/600x750_1.jpg?v=3">
-            <img src="Banner_static/Official-web/600x750_2.jpg?v=3">
+            <img src="Banner_static/Official-web/600x750_1.jpg?v=5">
+            <img src="Banner_static/Official-web/600x750_2.jpg?v=5">
         </div> -->
 
         
