--- a/LJ240813-H53342G-01/Banner_static.html
+++ b/LJ240813-H53342G-01/Banner_static.html
@@ -124,6 +124,26 @@
 
         <hr>
 
+        <h2>Google 動態墊檔圖</h2>
+        <div>300x250</div>
+        <div class="box">
+            <img src="Banner_static/google-Display Ads/300x250.jpg?v=7">
+        </div>
+        <div>320x50</div>
+        <div class="box">
+            <img src="Banner_static/google-Display Ads/320x50.jpg?v=7">
+        </div>
+        <div>970x250</div>
+        <div class="box">
+            <img src="Banner_static/google-Display Ads/970x250.jpg?v=7">
+        </div>
+        <div>728x90</div>
+        <div class="box">
+            <img src="Banner_static/google-Display Ads/728x90.jpg?v=7">
+        </div>
+
+        <hr>
+
         
         <h2>官網 Hero Banner</h2>
         <div class="box">
