--- a/LJ240913-A19377W-01/Banner_dynamic/300x250/300x250.html
+++ b/LJ240913-A19377W-01/Banner_dynamic/300x250/300x250.html
@@ -10,10 +10,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="ad.size" content="width=300,height=250">
+<meta name="authoring-tool" content="Adobe_Animate_CC">
 <title>300x250</title>
 <!-- write your code here -->
-<script src="https://s0.2mdn.net/ads/studio/cached_libs/createjs_2019.11.15_min.js"></script>
+<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 <script src="300x250.js"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
@@ -21,7 +21,7 @@ function init() {
 	canvas = document.getElementById("canvas");
 	anim_container = document.getElementById("animation_container");
 	dom_overlay_container = document.getElementById("dom_overlay_container");
-	var comp=AdobeAn.getComposition("28C5218B42C84C298A29266CCFDD9C29");
+	var comp=AdobeAn.getComposition("ED45D911843A46D7B699010AA602CA80");
 	var lib=comp.getLibrary();
 	var loader = new createjs.LoadQueue(false);
 	loader.addEventListener("fileload", function(evt){handleFileLoad(evt,comp)});
