--- a/LJ240923-B89488B-01/Banner_static.html
+++ b/LJ240923-B89488B-01/Banner_static.html
@@ -59,7 +59,7 @@
 <body>
     <div class="wrapper">
 
-       <!--  <h2>LINE</h2>
+        <h2>LINE</h2>
         <div>1200x628</div>
         <div class="box">
             <img src="Banner_static/LINE/1200x628.jpg?v=8" width="600px">
@@ -74,41 +74,56 @@
         </div>
 
         <hr>
+
+        <h2>YT</h2>
+        <div>300x60</div>
+        <div class="box">
+            <img src="Banner_static/YT/300x60.jpg?v=8">
+        </div>
+
+        <hr>
+
+        <h2>TikTok</h2>
+        <div>300x60</div>
+        <div class="box">
+            <img src="Banner_static/TikTok/98x98 logo.jpg?v=8">
+        </div>
+
+        <hr>
         
-        <h2>google Demand Gen Ads</h2>
+        <h2>GDN</h2>
         <div>1200x1200</div>
         <div class="box">
-            <img src="Banner_static/google-Demand Gen Ads/1200x1200_1.png?v=8" width="400px">
+            <img src="Banner_static/GDN/1200x1200_1.png?v=8" width="400px">
         </div>
         <div>1200x1200</div>
         <div class="box">
-            <img src="Banner_static/google-Demand Gen Ads/1200x1200_2.jpg?v=8" width="600px">
+            <img src="Banner_static/GDN/1200x1200_2.jpg?v=8" width="600px">
         </div>
         <div>1200x628</div>
         <div class="box">
-            <img src="Banner_static/google-Demand Gen Ads/1200x628.jpg?v=8" width="1200px">
+            <img src="Banner_static/GDN/1200x628.jpg?v=8" width="1200px">
         </div>
 
         <hr>
 
-        <h2>OneAd</h2>
-        <div>720x1280</div>
+        <h2>Amnet</h2>
+        <div>128x128</div>
         <div class="box">
-            <img src="Banner_static/OneAD/720x1280.jpg?v=8" width="500px">
+            <img src="Banner_static/Amnet/128x128.png?v=8">
         </div>
-        <div>720x1260</div>
+        <div>600x600</div>
         <div class="box">
-            <img src="Banner_static/OneAD/720x1260_1.jpg?v=8" width="500px">
-            <img src="Banner_static/OneAD/720x1260_2.jpg?v=8" width="500px">
+            <img src="Banner_static/Amnet/600x600.jpg?v=8" width="600px">
         </div>
-        <div>640x1360</div>
+        <div>1200x627</div>
         <div class="box">
-            <img src="Banner_static/OneAD/640x1360.jpg?v=8" width="500px">
+            <img src="Banner_static/Amnet/1200x627.jpg?v=8" width="1200px">
         </div>
 
         <hr>
 
-        <h2>POPIN  - Display Ads</h2>
+        <h2>POPIN</h2>
         <div>480x280</div>
         <div class="box">
             <img src="Banner_static/POPIN/480x280.jpg?v=8">
@@ -123,26 +138,6 @@
         </div>
 
         <hr>
-
-        <h2>Google 動態墊檔圖</h2>
-        <div>300x250</div>
-        <div class="box">
-            <img src="Banner_static/google-Display Ads/300x250.jpg?v=8">
-        </div>
-        <div>320x50</div>
-        <div class="box">
-            <img src="Banner_static/google-Display Ads/320x50.jpg?v=8">
-        </div>
-        <div>970x250</div>
-        <div class="box">
-            <img src="Banner_static/google-Display Ads/970x250.jpg?v=8">
-        </div>
-        <div>300x600</div>
-        <div class="box">
-            <img src="Banner_static/google-Display Ads/300x600.jpg?v=8">
-        </div>
-
-        <hr> -->
 
         
         <h2>官網 Hero Banner</h2>
