--- a/LJ240923-B89488B-01/Banner_static.html
+++ b/LJ240923-B89488B-01/Banner_static.html
@@ -84,7 +84,7 @@
         <hr>
 
         <h2>TikTok</h2>
-        <div>300x60</div>
+        <div>1:1</div>
         <div class="box">
             <img src="Banner_static/TikTok/98x98 logo.jpg?v=8">
         </div>
