--- a/LJ250108-Q63796Z-01/Banner_static.html
+++ b/LJ250108-Q63796Z-01/Banner_static.html
@@ -12,8 +12,8 @@
         padding: 0;
         margin: 0;
         text-align: center;
-        color: #fff;
-        background-color: #000;
+        color: #000;
+        background-color: #fff;
     }
     .wrapper {
         padding: 10px;
@@ -64,23 +64,23 @@
 
         <h2>官網 Hero Banner</h2>
         <div class="box">
-            <img src="Banner_static/Official-web/600x750.jpg?v=8">
+            <img src="Banner_static/Official-web/600x750.jpg?v=9">
         </div>
 
         <h2>官網 最新優惠</h2>
         <div class="box">
-            <img src="Banner_static/Official-web/370x245.jpg?v=8">
-            <img src="Banner_static/Official-web/320x280.jpg?v=8">
+            <img src="Banner_static/Official-web/370x245.jpg?v=9">
+            <img src="Banner_static/Official-web/320x280.jpg?v=9">
             <div>
-                <img src="Banner_static/Official-web/640x400.jpg?v=8">
-                <img src="Banner_static/Official-web/640x330.jpg?v=8">
+                <img src="Banner_static/Official-web/640x400.jpg?v=9">
+                <img src="Banner_static/Official-web/640x330.jpg?v=9">
             </div>
         </div>
 
         <h2>App</h2>
         <div class="box">
-            <img src="Banner_static/Official-web/400x400.jpg?v=8">
-            <img src="Banner_static/Official-web/640x320.jpg?v=8">
+            <img src="Banner_static/Official-web/400x400.jpg?v=9">
+            <img src="Banner_static/Official-web/640x320.jpg?v=9">
         </div>
         
 
