--- a/LJ250516-O40367D-01/Banner_static.html
+++ b/LJ250516-O40367D-01/Banner_static.html
@@ -59,28 +59,121 @@
 <body>
     <div class="wrapper">
 
-        
-
 
         <h2>官網 Hero Banner</h2>
         <div class="box">
-            <img src="Banner_static/600x750.jpg?v=8">
+            <img src="Banner_static/官網/600x750.jpg?v=1">
         </div>
 
         <h2>官網 最新優惠</h2>
         <div class="box">
-            <img src="Banner_static/370x245.jpg?v=8">
-            <img src="Banner_static/320x280.jpg?v=8">
+            <img src="Banner_static/官網/370x245.jpg?v=1">
+            <img src="Banner_static/官網/320x280.jpg?v=1">
             <div>
-                <img src="Banner_static/640x400.jpg?v=8">
-                <img src="Banner_static/640x330.jpg?v=8">
+                <img src="Banner_static/官網/640x400.jpg?v=1">
+                <img src="Banner_static/官網/640x330.jpg?v=1">
             </div>
         </div>
 
         <h2>App</h2>
         <div class="box">
-            <img src="Banner_static/400x400.jpg?v=8">
-            <img src="Banner_static/640x320.jpg?v=8">
+            <img src="Banner_static/官網/400x400.jpg?v=1">
+            <img src="Banner_static/官網/640x320.jpg?v=1">
+        </div>
+
+
+        <hr>
+
+
+        <h2>Google - Demand Gen Ads</h2>
+        <div>1200x628</div>
+        <div class="box">
+            <img src="Banner_static/KICKS涼夏版/Demand Gen Ads/1200x628.jpg?v=1" width="600px">
+            <img src="Banner_static/X-TRAIL 涼夏版/Demand Gen Ads/1200x628.jpg?v=1" width="600px">
+            <img src="Banner_static/SENTRA涼夏版/Demand Gen Ads/1200x628.jpg?v=1" width="600px">
+        </div>
+        <div>1200x1200</div>
+        <div class="box">
+            <img src="Banner_static/KICKS涼夏版/Demand Gen Ads/1200x1200.jpg?v=1" width="600px">
+            <img src="Banner_static/X-TRAIL 涼夏版/Demand Gen Ads/1200x1200.jpg?v=1" width="600px">
+            <img src="Banner_static/SENTRA涼夏版/Demand Gen Ads/1200x1200.jpg?v=1" width="600px">
+        </div>
+
+        <hr>
+
+
+        <h2>POPIN - Display Ads</h2>
+        <div>1200x628</div>
+        <div class="box">
+            <img src="Banner_static/KICKS涼夏版/Display Ads/1200x628.jpg?v=1" width="600px">
+            <img src="Banner_static/X-TRAIL 涼夏版/Display Ads/1200x628.jpg?v=1" width="600px">
+            <img src="Banner_static/SENTRA涼夏版/Display Ads/1200x628.jpg?v=1" width="600px">
+        </div>
+        <div>1200x800</div>
+        <div class="box">
+            <img src="Banner_static/KICKS涼夏版/Display Ads/1200x800.jpg?v=1" width="600px">
+            <img src="Banner_static/X-TRAIL 涼夏版/Display Ads/1200x800.jpg?v=1" width="600px">
+            <img src="Banner_static/SENTRA涼夏版/Display Ads/1200x800.jpg?v=1" width="600px">
+        </div>
+
+
+        <hr>
+
+
+        <h2>Line Ads</h2>
+        <div>600x400</div>
+        <div class="box">
+            <img src="Banner_static/KICKS涼夏版/Line Ads/600x400.jpg?v=1" width="300px">
+            <img src="Banner_static/X-TRAIL 涼夏版/Line Ads/600x400.jpg?v=1" width="300px">
+            <img src="Banner_static/SENTRA涼夏版/Line Ads/600x400.jpg?v=1" width="300px">
+        </div>
+        <div>1080x1080</div>
+        <div class="box">
+            <img src="Banner_static/KICKS涼夏版/Line Ads/1080x1080.jpg?v=1" width="600px">
+            <img src="Banner_static/X-TRAIL 涼夏版/Line Ads/1080x1080.jpg?v=1" width="600px">
+            <img src="Banner_static/SENTRA涼夏版/Line Ads/1080x1080.jpg?v=1" width="600px">
+        </div>
+
+
+        <hr>
+
+
+        <h2>Google - PMAX</h2>
+        <div>960x1200</div>
+        <div class="box">
+            <img src="Banner_static/KICKS涼夏版/PMAX/960x1200.jpg?v=1" width="300px">
+            <img src="Banner_static/X-TRAIL 涼夏版/PMAX/960x1200.jpg?v=1" width="300px">
+            <img src="Banner_static/SENTRA涼夏版/PMAX/960x1200.jpg?v=1" width="300px">
+        </div>
+
+
+        <hr>
+
+
+        <h2>CCL</h2>
+        <h2>AD2 - Display Ads</h2>
+        <div>1200x630</div>
+        <div class="box">
+            <img src="Banner_static/CCL涼夏版/1200x630.jpg?v=1" width="600px">
+        </div>
+
+        <h2>Amnet - Display Ads_PC Masthead</h2>
+        <div>970x250</div>
+        <div class="box">
+            <img src="Banner_static/CCL涼夏版/970x250.jpg?v=1" width="600px">
+        </div>
+
+        <h2>Amnet - Display Ads_Paralla scrolling</h2>
+        <div>970x250</div>
+        <div class="box">
+            <img src="Banner_static/CCL涼夏版/800x1200.jpg?v=1" width="600px">
+        </div>
+
+        <h2>Amnet - Display Ads_置頂跑馬燈A</h2>
+        <div>750x300</div>
+        <div class="box">
+            <img src="Banner_static/CCL涼夏版/750x300_A.gif?v=1">
+            <img src="Banner_static/CCL涼夏版/750x300_B.gif?v=1">
         </div>
         
 
